# faceit-python

./: .editorconfig  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  README.rst  README_ru.md  Taskfile.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  ci.yml  publish.yaml  publish.yml  update-submodules.yml
examples/: all_championships_async.py  all_championships_async_client_injection.py  all_history.py  all_history_sync.py  async_championships_custom_client.py  simple_discord_bot.py  sync_history.py  sync_top100_without_cm.py  sync_top200_without_cm.py
examples/discord_bot/: __main__.py  analysis.py  bot.py  cogs.py
scripts/: clean.py
src/faceit/: __init__.py  __version__.py  _faceit.py  _repr.py  _types.py  _typing.py  _utils.py  _version.py  constants.py  exceptions.py  faceit.py  types.py  utils.py  version.py
src/faceit/_resources/: __init__.py  _aggregator_factory.py  _base.py  _championships.py  _matches.py  _pagination.py  _players.py  _rankings.py  _teams.py  aggregator_factory.py  base.py  championships.py  matches.py  pagination.py  players.py  rankings.py  resource_aggregator.py  teams.py
src/faceit/_resources/data/: __init__.py  championships.py  leagues.py  matches.py  matchmakings.py  players.py  rankings.py  teams.py
src/faceit/api/: __init__.py  aggregator.py  base.py  pagination.py
src/faceit/api/data/: __init__.py  championships.py  games.py  helpers.py  leagues.py  matches.py  matchmakings.py  players.py  rankings.py  teams.py
src/faceit/http/: __init__.py  _client.py  _helpers.py  client.py  helpers.py
src/faceit/models/: __init__.py  _championship.py  _championships.py  _match.py  _page.py  _player.py  championship.py  championships.py  custom_types.py  error.py  item_page.py  match.py  player.py
src/faceit/models/_custom_types/: __init__.py  _adaptable.py  _faceit_uuid.py  adaptable.py  faceit_uuid.py
src/faceit/models/championships/: __init__.py  _general.py
src/faceit/models/custom_types/: __init__.py  _adaptable.py  _faceit_uuid.py  _utils.py  adaptable.py  common.py  faceit_uuid.py
src/faceit/models/players/: __init__.py  _general.py  _match.py  general.py  match.py
src/faceit/resources/: __init__.py  _base.py  _championships.py  _matches.py  _players.py  aggregator.py  base.py  championships.py  pagination.py  players.py  resource_aggregator.py
src/faceit/resources/data/: __init__.py  championships.py  games.py  helpers.py  leagues.py  matches.py  matchmakings.py  players.py  rankings.py  teams.py
tests/: conftest.py  test_custom_types.py  test_data_resource_integration.py  test_e2e_data_resource.py  test_error_parsing.py  test_http_client.py  test_pagination.py  test_pagination_integration.py  test_players_resource.py  test_repr.py  test_resource_aggregator.py  test_resources_integration.py  test_skill_level.py  test_warn_stacklevel.py
