[project]
name = "faceit"
version = "0.3.1"
description = "The Python wrapper for the FACEIT API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "zombyacoff", email = "zombyacoff@gmail.com" },
]
keywords = ["api", "faceit", "wrapper"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.13.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
env = ["python-decouple>=3.8"]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    # TODO
    #   Achieve 100% test coverage !!!
    # "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[project.urls]
"Repository" = "https://github.com/zombyacoff/faceit-python"
"Releases" = "https://github.com/zombyacoff/faceit-python/releases"
"Bug Tracker" = "https://github.com/zombyacoff/faceit-python/issues"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
